# password-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  WINDOWS_SETUP.md  install-webkit.sh  package-lock.json  package.json
docs/: README.md
src/: App.css  App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
