[package]
name = "password_app"
version = "0.1.1"
description = "A secure, cross-platform password manager built with Tauri, React, and Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/password-app"
edition = "2021"

[[bin]]
name = "password_app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["clipboard-all", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.21.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true 
